@@ -155,6 +155,7 @@ class JsonLoader extends ContentStreamLoader {
     assertNextEvent( JSONParser.OBJECT_START );
 
     DeleteUpdateCommand cmd = new DeleteUpdateCommand(req);
+    cmd.commitWithin = commitWithin;
 
     while( true ) {
       int ev = parser.nextEvent();
@@ -167,7 +168,9 @@ class JsonLoader extends ContentStreamLoader {
           else if( "query".equals(key) ) {
             cmd.query = parser.getString();
           }
-          else {
+          else if( "commitWithin".equals(key) ) { 
+            cmd.commitWithin = Integer.parseInt(parser.getString());
+          } else {
             throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "Unknown key: "+key+" ["+parser.getPosition()+"]" );
           }
         }
